# UrlDebloater

./: .gitignore  Cargo.toml  README.md  flake.nix  mixer.dockerfile
.github/workflows/: mixer-docker-publish.yml
desktop/: Cargo.toml  README.md  build.rs
desktop/src/: clipboard_poller.rs  config.rs  gui.rs  main.rs
desktop/wix/: main.wxs  urldebloater.rc
mixer/: Cargo.toml  README.md
mixer/src/: error.rs  main.rs
urlwasher/: Cargo.toml  README.md
urlwasher/src/: lib.rs  text_washer.rs
