[package]
name = "urldebloater"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arboard = "3.3.0"
anyhow = "1.0"
urlwasher = { path = "../urlwasher" }
glutin = "0.31"
tray-icon = "0.11.1"
image = "0.24"
winit = "0.28"
eframe = { git = "https://github.com/rockisch/egui", branch = "run-detached" }
url = "2.5"
futures = "0.3.30"
notify-rust = "4.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
